--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -8,39 +8,40 @@
     <title>Title</title>
 </head>
 <body>
-<footer th:fragment="foot">
-    <div>
-        <ul>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-            <li>sdfjsldkjf</li>
-        </ul>
-    </div>
-</footer>
+<footer >
+    <footer th:fragment="foot" class="reveal">
+
+        <div class="myfooter reveal-2">
+            <div class="rose">
+                <h5 class="reveal-2">MaryCrea.fr</h5>
+                <p class="reveal-2">Here you can use rows and columns to organize your footer content.</p>
+            </div>
+            <div class="rose">
+
+                <h5 class="reveal-2">Contact</h5>
+                <ul class="reveal-2 ">
+                    <li>
+                        <a href="#!">contact</a>
+                    </li>
+                    <li>
+                        <a href="#!">06 00 00 00</a>
+                    </li>
+                </ul>
+                <p class="reveal-2">mon chez moi <br>31002 Grenade</p>
+
+            </div>
+            <div class="rose">
+                <h5 class="reveal-2">Suivez moi</h5>
+                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x reveal-2"> </i>
+            </div>
+            <div class="rose-fonce">
+                <p class="reveal-2">Copyright 2019 marylene| Realisation Jerome</p>
+            </div>
+        </div>
+
+
+
+    </footer>
+    <!-- Footer -->
 </body>
 </html>
