--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,45 +3,41 @@
 
 <html lang="en">
 <head>
-    <link rel="stylesheet"  href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<footer >
-    <footer th:fragment="foot" class="reveal">
+<footer  th:fragment="foot">
 
-        <div class="myfooter reveal-2">
-            <div class="rose">
-                <h5 class="reveal-2">MaryCrea.fr</h5>
-                <p class="reveal-2">Here you can use rows and columns to organize your footer content.</p>
-            </div>
-            <div class="rose">
-
-                <h5 class="reveal-2">Contact</h5>
-                <ul class="reveal-2 ">
-                    <li>
-                        <a href="#!">contact</a>
-                    </li>
-                    <li>
-                        <a href="#!">06 00 00 00</a>
-                    </li>
-                </ul>
-                <p class="reveal-2">mon chez moi <br>31002 Grenade</p>
-
-            </div>
-            <div class="rose">
-                <h5 class="reveal-2">Suivez moi</h5>
-                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x reveal-2"> </i>
-            </div>
-            <div class="rose-fonce">
-                <p class="reveal-2">Copyright 2019 marylene| Realisation Jerome</p>
-            </div>
+    <div class="myfooter reveal reveal-visible">
+        <div class="rose">
+            <h5 class="reveal-1">MaryCrea.fr</h5>
+            <p class="reveal-1">Here you can use rows and columns to organize your footer content.</p>
         </div>
+        <div class="rose">
+            <h5  class="reveal-2">Contact</h5>
+            <a class="reveal-2" href="#!">contact</a>
+            <a class="reveal-2"  href="#!">06 00 00 00</a>
+            <p class="reveal-2" > "mon chez moi <br>31002 Grenade</p>
+        </div>
+        <div class="rose">
+            <h5 class="reveal-3">Suivez moi</h5>
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x reveal-3"> </i>
+        </div>
+        <div class="rose-fonce">
+            <p class="reveal-3">Copyright 2019 marylene| Realisation Jerome valette</p>
+        </div>
+    </div>
 
 
 
-    </footer>
-    <!-- Footer -->
+</footer>
+
+
+</footer>
+<!-- Footer -->
 </body>
 </html>
