ajout de hibernate et crud sur les service

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <header th:replace="header.html :: top"></header>
 
 <section class="mes_conviction">
-    <h1 th:text="${email}"></h1>
+    <h1 th:text="${username}"></h1>
     <section class="content">
         <div>
             <h2>Mes convictions</h2>
