--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -29,6 +29,7 @@
     <a class="nav_titre" href="/service">Mes Services</a>
     <a class="nav_titre" href="/blog">Mes Articles</a>
     <a class="nav_titre" href="/connexion">Connexion</a>
+    <a class="nav_titre" href="/crudservice">Nouveau service</a>
     <div class="nav_titre">Contact</div>
 
 </header>
