--- a/src/main/resources/templates/monarticle.html
+++ b/src/main/resources/templates/monarticle.html
@@ -13,9 +13,11 @@
 </head>
 <body>
 <header th:replace="header.html :: top"></header>
+<a th:href="@{/blog}" th:if="${session.user.role == 'admin'}">Retour a mes articles</a>
     <h1 th:text="${article.getTitreArticle()}"> </h1>
+<p th:text="${#temporals.format(article.dateArticle, 'dd MMMM yyyy HH:mm:ss')}"></p>
     <img th:src="${article.image}"/>
-    <p th:text="${article.article}"> </p>
+    <p th:text="${article.detail}"> </p>
 <footer th:replace="footer.html :: foot"></footer>
 </body>
 </html>
