--- a/src/main/resources/templates/monservice.html
+++ b/src/main/resources/templates/monservice.html
@@ -13,12 +13,10 @@
 </head>
 <body>
 <header th:replace="header.html :: top"></header>
-
+<a th:href="@{/service}" th:if="${session.user.role == 'admin'}">Retour a mes articles</a>
 <h1 th:text="${service.titre}"> </h1>
 <img th:src="${service.image}"/>
 <p th:text="${service.detail}"> </p>
-
-
 <footer th:replace="footer.html :: foot"></footer>
 </body>
 </html>
