--- a/src/main/resources/templates/monarticle.html
+++ b/src/main/resources/templates/monarticle.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header th:replace="header.html :: top"></header>
-<a th:href="@{/blog}" th:if="${session.user.role == 'admin'}">Retour a mes articles</a>
+<a th:href="@{/blog}">Retour a mes articles</a>
     <h1 th:text="${article.getTitreArticle()}"> </h1>
 <p th:text="${#temporals.format(article.dateArticle, 'dd MMMM yyyy HH:mm:ss')}"></p>
     <img th:src="${article.image}"/>
